# projekt-2-lukasz-rybakowski

./: CMakeLists.txt
src/: main.cpp
xml/: vending_machine_config.xml
